kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-capstone
  labels:
    app: cdn-capstone
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cdn-capstone
